# capitalOS

./: .env.example  .gitignore  BACKUP_AND_RECOVERY.md  DEPLOYMENT.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 6c42302253f3_add_budgets.py  a210df2a0774_add_user_pin_hash.py  a38bfcde4564_initial_schema.py  b4b8c9070e5c_add_bank_connections.py
backend/app/: __init__.py  main.py
backend/app/calculations/: __init__.py  goals.py  money.py  positions.py  projections.py  recurrence.py  spending.py  transfers.py  types.py
backend/app/core/: config.py  csrf.py  db.py  deps.py  security.py
backend/app/importers/: __init__.py  aib.py  base.py  generic.py  manual_template.py  revolut.py
backend/app/models/: __init__.py  account.py  audit.py  bank_connection.py  base.py  budget.py  category.py  enums.py  exchange_rate.py  goal.py  holding.py  household.py  import_batch.py  institution.py  reserve.py  rule.py  scheduled_cashflow.py  transaction.py  user.py
backend/app/providers/: fx.py  fx_external.py  prices.py
backend/app/repositories/: base.py
backend/app/schemas/: account.py  auth.py  bank_connection.py  budget.py  category.py  common.py  dashboard.py  exchange_rate.py  goal.py  holding.py  household.py  imports.py  institution.py  reports.py  reserve.py  rule.py  scheduled_cashflow.py  transaction.py
backend/app/services/: audit.py  auth.py  bank_sync.py  budgets.py  dashboard.py  (+6 more)
backend/scripts/: seed_common.py  seed_demo.py
(+149 files in other folders)
